# fastfeatureflag

./: .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: main.yml
changelog/: index.html
docs/: index.md  quickstart.md  quickstart.py  quickstart.py.skip  roadmap.md
docs/development_process/: dagger_pipeline.md  pre_commit_pipeline.md  workflow.md
docs/features/: feature_flag_code.ipynb  features.md  pytest_code.ipynb  sample_config.toml  shadow_code.ipynb
docs/use_cases/: unfinished_new_feature.ipynb
fastfeatureflag/: feature_content.py  feature_flag.py  feature_flag_configuration.py  feature_schema.py  shadow_configuration.py
features/: feature_config_file.feature  feature_shadow.feature  named_feature_flag.feature  simple_flag.feature
features/configuration_code/: configuration_code.ipynb  index.html
features/feature_flag_code/: index.html
features/feature_flag_reference/: feature_flag_reference.md  index.html
features/pytest_code/: index.html
features/pytest_code_reference/: index.html  pytest_code_reference.md
features/shadow_code/: index.html
features/shadow_reference/: index.html  shadow_reference.md
features/steps/: feature_config.toml  feature_config_file.py  feature_shadow.py  named_feature_flag.py  simple_flag.py
flaggen/: config.py  feature_flag.py  prototype.py.old
pipeline/: .pypi_token  ci_build_python_package.py  ci_main.py  ci_unittests.py
quickstart/quickstart/: index.html  (+1 more)
roadmap/: index.html  roadmap.md
(+16 files in other folders)
