[tool.poetry]
name = "pyflag"
version = "0.0.1"
description = "light-weight feature flags"
authors = ["GreNait"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.1.21"
mkdocs = "^1.5.2"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
commitizen = "^3.6.0"
behave = "^1.2.6"
pytest-watch = "^4.2.0"
dagger-io = "^0.8.1"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[tool.mypy]
exclude = ['.venv','tests','features']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
